--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@layer base {
+    a {
+        @apply text-orange-500;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components {
+    .primary-btn {
+        @apply w-full h-10 bg-orange-500 text-white text-center font-semibold rounded-md hover:bg-orange-400 transition-colors;
+    }
 }
