--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,24 @@
 @tailwind utilities;
 
 @layer base {
-    a {
-        @apply text-orange-500;
-    }
+  a {
+    @apply text-orange-500;
+  }
+}
+
+@layer utilities {
+  .scroll-hidden {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .scroll-hidden::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 @layer components {
-    .primary-btn {
-        @apply w-full h-10 bg-orange-500 text-white text-center font-semibold rounded-md hover:bg-orange-400 transition-colors;
-    }
+  .primary-btn {
+    @apply w-full h-10 bg-orange-500 text-white text-center font-semibold rounded-md hover:bg-orange-400 transition-colors;
+  }
 }
